--- a/src/components/button.css
+++ b/src/components/button.css
@@ -1,10 +1,16 @@
-.button:hover {
-    color: red;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+.button:hover, .button:active { 
+    top: -10px;
 }
 
 .button {
-    padding-left: 20px;
-    padding-right: 20px;
-    border: 5px solid black;
-    border-radius: 100px;
+    position: relative;
+    border: none;
+    padding: 0;
+    margin-left: 5%;
+    margin-right: 5%;
+    background-color: #282c34;
+    transition: top ease 0.5s;
+    top: 0;
 }
